--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -11,7 +11,7 @@ jobs:
       - name: panvimdoc
         uses: kdheepak/panvimdoc@main
         with:
-          vimdoc: nvim-neoclip.lua
+          vimdoc: neoclip
           description: neoclip is a clipboard manager for neovim
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
