test(db) add sqlite

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           mkdir -p rtps
           git clone --depth 1 https://github.com/nvim-lua/plenary.nvim rtps/plenary.nvim
           git clone --depth 1 https://github.com/nvim-telescope/telescope.nvim rtps/telescope.nvim
+          git clone --depth 1 https://github.com/tami5/sqlite.lua.git rtps/sqlite.lua
       - name: Run tests
         run: |
             export PATH="${PWD}/build/:${PATH}"
