Add visual paste
Closes https://github.com/AckslD/nvim-neoclip.lua/issues/128

--- a/setup.lua.example
+++ b/setup.lua.example
@@ -21,6 +21,7 @@ return {
 						select = "<cr>",
 						paste = "<c-p>",
 						paste_behind = "<c-k>",
+						paste_visual = "<c-v>",
 						replay = "<c-q>", -- replay a macro
 						delete = "<c-d>", -- delete an entry
 						edit = "<c-e>", -- edit an entry
@@ -32,6 +33,7 @@ return {
 						--- It is possible to map to more than one key.
 						-- paste = { 'p', '<c-p>' },
 						paste_behind = "P",
+						paste_visual = "v",
 						replay = "q",
 						delete = "d",
 						edit = "e",
@@ -42,6 +44,7 @@ return {
 					select = "default",
 					paste = "ctrl-p",
 					paste_behind = "ctrl-k",
+					paste_visual = "ctrl-v",
 					custom = {},
 				},
 			},
